<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">qsjiang-assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_claim">Add Claim</string>
    <string name="title_activity_claim_creation">ClaimCreationActivity</string>
    <string name="start_date">Start Date</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="end_date">End Date</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="destination_and_reason">Destination and Reason</string>
    <string name="yyyymmdd">YYYYMMDD</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="update">Update</string>
    <string name="add_expense">Add Expense</string>
    <string name="submit">Submit</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="date">Date</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="detail">Detail</string>
    <string name="e_g_cad_usd_eur_gbp">e.g. CAD,USD,EUR,GBP</string>
    <string name="_0_00">0.00</string>
    <string name="category">Category</string>
    <string name="unit_of_currency">Unit of Currency</string>
    <string name="e_g_air_fare_fuel_parking_">e.g. air fare, fuel, parking…</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_travel_expense_tracker">Welcome to Travel Expense Tracker</string>
    <string name="delete">Delete</string>
    <string name="title_for_displaying">Title for Displaying</string>
    <string name="title">Title</string>

</resources>
