<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpenseActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expnseDateET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/yyyymmdd"
        android:inputType="number"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expnseDateET"
        android:layout_below="@+id/expnseDateET"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expenseCategoryET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/e_g_air_fare_fuel_parking_" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseCategoryET"
        android:layout_below="@+id/expenseCategoryET"
        android:text="@string/amount_spent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expenseAmountET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/expenseCategoryET"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/_0_00"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseAmountET"
        android:layout_below="@+id/expenseAmountET"
        android:text="@string/unit_of_currency"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expenseUnitET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:hint="@string/e_g_cad_usd_eur_gbp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseUnitET"
        android:layout_below="@+id/expenseUnitET"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expenseDescriptionET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/expenseUnitET"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:hint="@string/detail" />

    <Button
        android:id="@+id/expenseSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseDescriptionET"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/expenseDescriptionET"
        android:onClick="expenseSaveButtonAction"
        android:text="@string/save" />

    <Button
        android:id="@+id/expenseDeleteButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:onClick="expenseDeleteButtonAction"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseDescriptionET"
        android:layout_below="@+id/expenseDescriptionET"
        android:text="@string/title_for_displaying"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/expenseNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/expenseDescriptionET"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="" />

</RelativeLayout>
