<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClaimCreationActivity" >

    <TextView
        android:id="@+id/ClaimStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/saveClaimButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/descriptionET"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="saveClaimButtonAction"
        android:text="@string/save" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/descriptionET"
        android:layout_below="@+id/ClaimStatus" >

        <EditText
            android:id="@+id/startDateET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:ems="10"
            android:hint="@string/yyyymmdd"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ClaimStatus"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="49dp"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/endDateET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/yyyymmdd"
        android:inputType="number" />

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/destination_and_reason"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endDateET"
        android:layout_below="@+id/endDateET"
        android:layout_marginTop="50dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>